# foss4g_uk

./: .gitignore  LICENSE  README.md  environment.yml  environment_ip.yml  index.md  myst.yml  pangeo_earthcode.yml  references.bib  wildfires_daskgateway.ipynb
1. introduction/: 1. introduction.md  2. setup.md  3. agenda.md
2. earthcode101/: 1. EarthCODE 101.ipynb  (+1 more)
aoi/: feature.geojson  (+1 more)
publishing-to-earthcode/deep-code/deep-code/: .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dataset_config.yaml  environment.yml  publish-pangeo.ipynb  pyproject.toml  workflow_config.yaml
publishing-to-earthcode/deep-code/deep-code/deep_code/: __init__.py  constants.py  version.py
publishing-to-earthcode/deep-code/deep-code/deep_code/cli/: generate_config.py  main.py  publish.py
publishing-to-earthcode/deep-code/deep-code/deep_code/tests/tools/: test_publish.py
publishing-to-earthcode/deep-code/deep-code/deep_code/tests/utils/: test_custom_xrlint_rules.py  test_dataset_stac_generator.py  test_github_automation.py  test_helper.py  test_ogc_api_record.py  test_ogc_record_generator.py  test_osc_extension.py
publishing-to-earthcode/deep-code/deep-code/deep_code/tools/: lint.py  new.py  publish.py  setup_ci.py  test.py
publishing-to-earthcode/deep-code/deep-code/deep_code/utils/: __init__.py  custom_xrlint_rules.py  dataset_stac_generator.py  github_automation.py  helper.py  ogc_api_record.py  ogc_record_generator.py  osc_extension.py
publishing-to-earthcode/deep-code/deep-code/workflows/: publish.yml  unittest-workflow.yaml
(+21 files in other folders)
